--- a/ledger/templates/recipe_list.html
+++ b/ledger/templates/recipe_list.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Recipe List</title>
+        <title> Recipe List </title>
     </head>
     <body>
         <h1>Recipe Book</h1>
         <ul>
-            {% for recipe in recipes %}
-                <li><a href='{{ recipe.link }}'>{{ recipe.name }}</a></li>
+            {% for recipe in object_list %}
+                <li><a href='{{ recipe.get_absolute_url }}'> {{ recipe }}</a></li>
             {% endfor %}
         </ul>
     </body>
