Editted html files and implemented admin

--- a/ledger/templates/recipe_detail.html
+++ b/ledger/templates/recipe_detail.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title> Recipe Book </title>
+        <title>{{ object.name }}</title>
     </head>
     <body>
-        <h1>Recipe Book</h1>
         <h2>{{ object.name }}</h2>
         <h3>Ingredients:</h3>
         <ul>
