added registration templates and html files for resetting password.

--- a/ledger/templates/recipe_detail.html
+++ b/ledger/templates/recipe_detail.html
@@ -4,6 +4,7 @@
         <title>{{ object.name }}</title>
     </head>
     <body>
+        <h1>Written by: {{ object.author }}</h1>
         <h2>{{ object.name }}</h2>
         <h3>Ingredients:</h3>
         <ul>
