--- a/ledger/templates/registration/login.html
+++ b/ledger/templates/registration/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Task List</title>
+        <title>Recipe List</title>
         <h1>Login</h1>
         <a href = "{% url 'password_reset' %}">I forgot.</a>
     </head>
