--- a/ledger/templates/header.html
+++ b/ledger/templates/header.html
@@ -6,14 +6,21 @@
   
     <body>
         {% if request.user.is_authenticated %}
+        
         <h3>Welcome {{request.user.username}}</h3>
-        <form action="{% url 'logout' %}" method="">
-        {% csrf_token %}
-        <button type="submit">LOG OUT</button>
+
+        <form action="{% url 'logout' %}" method="POST">
+            {% csrf_token %}
+            <button type="submit">LOG OUT</button>
         </form>
+
         {% else %}
-        <a href="{% url  'login' %}">LOGIN</a>
+            <a href="{% url  'login' %}">LOGIN</a>
         {% endif %}
+
+        {% block content %}
+        {% endblock %}
+
     </body>
    
 </html>
